--- a/wiki/compliance.wiki
+++ b/wiki/compliance.wiki
@@ -1,6 +1,6 @@
 #summary Copmliance with the C++ Standard Library
 
-= 17.4.1.3 Freestanding implementations [compliance] =
+= 17.4.1.3 Freestanding implementations compliance =
 
 2 A freestanding implementation has an implementation-defined set of headers. This set shall include at least the following
 headers:
