--- a/wiki/Copmliance.wiki
+++ b/wiki/Copmliance.wiki
@@ -1,4 +1,5 @@
-#summary Copmliance with the C++ Standard Library
+#summary Compliance with the C++ Standard Library
+#labels Featured,Phase-Requirements
 
 = 17.4.1.3 Freestanding implementations =
 
