--- a/wiki/Copmliance.wiki
+++ b/wiki/Copmliance.wiki
@@ -15,79 +15,86 @@ headers:
 
 3 The supplied version of the header <cstdlib> shall declare at least the functions `abort()`, `atexit()`, and `exit()`
 ----
-todo
+TODO: syncronize descriptions with current code base.
+
+==C++ Features requiring runtime support==
+ # `try`/`catch` works even in kernel mode with a few limitations.
+ # `dynamic_cast<>` included x64 branch only.
+ # Static object ctors/dtors included x64 branch only.
+ # `thread_local` not supported yet.
+ # ...
 
 ==C++ Library Headers==
- # <algorithm>
- # <array> 
- # <bitset> 
- # <chrono> 
- # <complex>  
+ # <algorithm> - About 45%.
+ # <array>     - As in TR1, no tuple interface yet.
+ # <bitset>    - In x64 branch only.
+ # <chrono>    - In x64 branch only.
+ # <complex>   - Not planned in the near future.
  # <deque> 
- # <exception> 
- # <fstream> 
- # <functional> 
+ # <exception> - Incomplete (lack of C++0x features).
+ # <fstream>   *
+ # <functional> - As in C++03, no bind & function.
  # <initializer_list>
- # <iomanip> 
- # <ios> 
- # <iosfwd> 
- # <iostream> 
- # <istream> 
- # <iterator> 
- # <limits> 
- # <list> 
- # <locale> 
- # <map> 
- # <memory> 
- # <mutex> 
- # <new> 
- # <numeric> 
- # <ostream> 
- # <queue> 
+ # <iomanip>   - Complete (see iosfwd)
+ # <ios>       - No ios_base callbacks, locale.
+ # <iosfwd>    - Complete, but no benefins as I/O streams are in development.
+ # <iostream>
+ # <istream>   - Incomplete.
+ # <iterator>  - Complete (?) as in current Standard.
+ # <limits>    - Complete except of numeric_limits<long double>::infinity() for ICC (10 bytes in size)
+ # <list>      - No splice, merge. Redisign is planned to get O(n) size().
+ # <locale>    - Incomplete.
+ # <map>       - As RB tree now.
+ # <memory>    - unique_ptr<> as in N2691, experemental shared_ptr<> based on linked list.
+ # <mutex>
+ # <new>       - Incomplete
+ # <numeric>   - Only std::accumulate.
+ # <ostream>   *
+ # <queue>     - In x64 branch only.
  # <random> 
- # <ratio> 
+ # <ratio>     - In x64 branch only.
  # <regex> 
- # <set> 
- # <sstream> 
- # <stack> 
- # <stdexcept> 
- # <streambuf> 
- # <string> 
- # <strstream> 
+ # <set>       - In x64 branch only.
+ # <sstream>   - Incomplete.
+ # <stack>     - As in C++03 but on top of vector.
+ # <stdexcept> - Complete.
+ # <streambuf> - As in C++03 (no swap).
+ # <string>    - Missed few members and I/O support.
+ # <strstream> - Complete.
  # <system_error> 
  # <threads>
  # <tuple>
- # <typeinfo>
- # <type_traits>
+ # <typeinfo>  - Copmlete, but name demangling implemented in x64 branch only (not required by Standard).
+ # <type_traits> - Complete (N2723). Requires MSVC 2005 or compatible compiler.
  # <unordered_map>
  # <unordered_set>
- # <utility>
+ # <utility>   - No forward/move.
  # <valarray>
- # <vector>
+ # <vector>    - Note stl-exception-safety branch.
 
 ==C++ Headers for C Library Facilities==
- # <cassert> 
- # <ccomplex> 
- # <cctype> 
+ # <cassert>   - Complete.
+ # <ccomplex>  - Not planned.
+ # <cctype>
  # <cerrno> 
- # <cfenv> 
- # <cfloat> 
+ # <cfenv>
+ # <cfloat>    - Complete. But no runtime support for floats yet.
  # <cinttypes> 
- # <ciso646> 
- # <climits> 
- # <clocale> 
+ # <ciso646>   - Dummy header.
+ # <climits>   - Complete.
+ # <clocale>
  # <cmath> 
  # <csetjmp> 
  # <csignal> 
- # <cstdarg> 
+ # <cstdarg>   - Complete.
  # <cstdbool> 
- # <cstddef> 
+ # <cstddef>   - No NULL macro, use std::nullptr.
  # <cstdio> 
  # <cstdint> 
- # <cstdlib> 
- # <cstring> 
- # <ctgmath> 
+ # <cstdlib>   - FILE supports only binary mode. No atexit yet. No buffer-overflowing stuff included.
+ # <cstring>   - No strdup.
+ # <ctgmath>   - None as ccomplex.
  # <ctime> 
- # <cuchar> 
- # <cwchar> 
+ # <cuchar>
+ # <cwchar>    - Incomplete.
  # <cwctype> 
