--- a/wiki/Compliance.wiki
+++ b/wiki/Compliance.wiki
@@ -30,15 +30,15 @@ TODO: syncronize descriptions with current code base.
 || # || <bitset>    || In x64 branch only. ||
 || # || <chrono>    || In x64 branch only. ||
 || # || <complex>   || Not planned in the near future. ||
-|| # || <deque> || 
+|| # || <deque> ||
 || # || <exception> || Incomplete (lack of C++0x features). ||
 || # || <fstream>   || * ||
 || # || <functional> || As in C++03, no `bind` & `function`. ||
-|| # || <initializer_list> || 
+|| # || <initializer_list> ||
 || # || <iomanip>   || Complete (see iosfwd) ||
 || # || <ios>       || No `ios_base` callbacks, `locale`. ||
 || # || <iosfwd>    || Complete, but no benefins as I/O streams are in development. ||
-|| # || <iostream> || 
+|| # || <iostream> ||
 || # || <istream>   || Incomplete. ||
 || # || <iterator>  || Complete (?) as in current Standard. ||
 || # || <limits>    || Complete except of `numeric_limits<long double>::infinity()` & Co for ICC (10 bytes in size). ||
@@ -46,14 +46,14 @@ TODO: syncronize descriptions with current code base.
 || # || <locale>    || Incomplete. ||
 || # || <map>       || As RB tree now. ||
 || # || <memory>    || `unique_ptr<>` as in N2691, experemental `shared_ptr<>` based on linked list (not thread safe). ||
-|| # || <mutex> || 
+|| # || <mutex> ||
 || # || <new>       || Complete ||
 || # || <numeric>   || Only `std::accumulate`. ||
 || # || <ostream>   || * ||
 || # || <queue>     || In x64 branch only. ||
-|| # || <random> || 
+|| # || <random> ||
 || # || <ratio>     || In x64 branch only. ||
-|| # || <regex> || 
+|| # || <regex> ||
 || # || <set>       || In x64 branch only. ||
 || # || <sstream>   || Incomplete. ||
 || # || <stack>     || As in C++03 but on top of `vector`. ||
@@ -61,40 +61,40 @@ TODO: syncronize descriptions with current code base.
 || # || <streambuf> || As in C++03 (no `swap`). ||
 || # || <string>    || Missed few members and I/O support. ||
 || # || <strstream> || Complete. ||
-|| # || <system_error> || 
-|| # || <threads> || 
-|| # || <tuple> || 
+|| # || <system_error> ||
+|| # || <threads> ||
+|| # || <tuple> ||
 || # || <typeinfo>  || Copmlete, but name demangling implemented in x64 branch only (not required by Standard). ||
 || # || <type_traits> || Complete (N2723). Requires MSVC 2005 or compatible compiler. ||
-|| # || <unordered_map> || 
-|| # || <unordered_set> || 
+|| # || <unordered_map> ||
+|| # || <unordered_set> ||
 || # || <utility>   || No `forward`/`move`. ||
-|| # || <valarray> || 
+|| # || <valarray> ||
 || # || <vector>    || Note stl-exception-safety branch. ||
 
 ==C++ Headers for C Library Facilities==
 || # || <cassert>   || Complete. ||
 || # || <ccomplex>  || Not planned. ||
-|| # || <cctype> || 
-|| # || <cerrno> || 
-|| # || <cfenv> || 
+|| # || <cctype> ||
+|| # || <cerrno> ||
+|| # || <cfenv> ||
 || # || <cfloat>    || Complete. But no runtime support for floats yet. ||
-|| # || <cinttypes> || 
+|| # || <cinttypes> ||
 || # || <ciso646>   || Dummy header. ||
 || # || <climits>   || Complete. ||
-|| # || <clocale> || 
-|| # || <cmath> || 
-|| # || <csetjmp> || 
-|| # || <csignal> || 
+|| # || <clocale> ||
+|| # || <cmath> ||
+|| # || <csetjmp> ||
+|| # || <csignal> ||
 || # || <cstdarg>   || Complete. ||
-|| # || <cstdbool> || 
+|| # || <cstdbool> ||
 || # || <cstddef>   || No `NULL` macro, use `nullptr`. ||
-|| # || <cstdio> || 
-|| # || <cstdint> || 
+|| # || <cstdio> ||
+|| # || <cstdint> ||
 || # || <cstdlib>   || `FILE` supports only binary mode. `atexit` in x64 branch only. No buffer-overflowing stuff included. ||
 || # || <cstring>   || No `strdup`. ||
 || # || <ctgmath>   || None as ccomplex. ||
-|| # || <ctime> || 
+|| # || <ctime> ||
 || # || <cuchar> ||
 || # || <cwchar>    || Incomplete. ||
-|| # || <cwctype> || Compliance
+|| # || <cwctype> || Compliance ||
