--- a/wiki/Compliance.wiki
+++ b/wiki/Compliance.wiki
@@ -37,7 +37,7 @@ TODO: syncronize descriptions with current code base.
 || # || <forward_list> ||
 || # || <fstream>   ||
 || # || <functional> || As in C++03, no `bind` & `function`. ||
-|| # || <initializer_list> ||
+|| # || <initializer_list> || No compilers to support it (except GCC 4.4). ||
 || # || <iomanip>   || Complete (see iosfwd) ||
 || # || <ios>       || No `ios_base` callbacks, `locale`. ||
 || # || <iosfwd>    || Complete, but no benefins as I/O streams are in development. ||
@@ -48,7 +48,7 @@ TODO: syncronize descriptions with current code base.
 || # || <list>      || No `splice`, `merge`. Redisign is planned to trade O(n) `size()`. ||
 || # || <locale>    || Incomplete. ||
 || # || <map>       || As RB tree now; untested ||
-|| # || <memory>    || `unique_ptr<>` as in N2691, experemental `shared_ptr<>` based on linked list (not thread safe); untested. ||
+|| # || <memory>    || `unique_ptr<>` complete as in N2723, experemental `shared_ptr<>` based on linked list (not thread safe); untested. ||
 || # || <mutex> ||
 || # || <new>       || Complete ||
 || # || <numeric>   || Only `std::accumulate`. ||
@@ -68,10 +68,10 @@ TODO: syncronize descriptions with current code base.
 || # || <threads> ||
 || # || <tuple> ||
 || # || <typeinfo>  || Copmlete, but name demangling implemented in x64 branch only (not required by Standard). ||
-|| # || <type_traits> || Almost complete (N2723). Requires MSVC 2005 or compatible compiler. ||
+|| # || <type_traits> || Almost complete (N2723) (no is_standard_layout for MSVC & ICC). ||
 || # || <unordered_map> ||
 || # || <unordered_set> ||
-|| # || <utility>   || No `forward`/`move`. ||
+|| # || <utility>   || Complete. ||
 || # || <valarray> ||
 || # || <vector>    || Note about stl-exception-safety branch. ||
 
@@ -94,11 +94,11 @@ TODO: syncronize descriptions with current code base.
 || # || <cstdbool> ||
 || # || <cstddef>   || No `NULL` macro, use `nullptr`. ||
 || # || <cstdio> ||
-|| # || <cstdint> ||
+|| # || <cstdint> || Complete. ||
 || # || <cstdlib>   || `FILE` supports only binary mode. `atexit` in x64 branch only. No buffer-overflowing stuff included. ||
 || # || <cstring>   || No `strdup`. ||
 || # || <ctgmath>   || None as ccomplex. ||
-|| # || <ctime> ||
-|| # || <cuchar> ||
+|| # || <ctime> ||Incomplete. ||
+|| # || <cuchar> || Incomplete. ||
 || # || <cwchar>    || Incomplete. ||
 || # || <cwctype> || Compliance ||
