--- a/wiki/Compilers.wiki
+++ b/wiki/Compilers.wiki
@@ -9,7 +9,7 @@ TODO: intro.
  * MSVC 2005 SP1 (v14.00.50727) or newer 
  * MSVC 2010 CTP (v16)
  * Intel C++ 10.0 (or older?) or newer
- * Intel C++ 11.1 (East Mill)
+ * Intel C++ 11.0
  * Codegear C++ 2009 (v6.16) 
 
 Also, there are plans to support a GCC 4.4 (C++ standard library only).
@@ -32,9 +32,9 @@ Supported (_fully_?).
 
 It's compatible to the MSVC2005 (_and 2008_?), so it fully supported except 10 bytes size `double` type.
 
-=== Intel C++ 11.1 ===
+=== Intel C++ 11.0 ===
 
-It is a beta of the new Intel C++ compiler which would have more C++0x [http://www.intel.com/software/products/compilers/docs/clin/main_cls/copts/ccpp_options/option_std.htm specific features] (currently `static_assert`, `auto`, lambdas, extern templates, `decltype`).
+It is a newest C++ compiler from Intel which have a some C++0x [http://www.intel.com/software/products/compilers/docs/clin/main_cls/copts/ccpp_options/option_std.htm specific features] (e.g. `static_assert`, `auto`, lambdas, extern templates, `decltype`).
 
 Supported as MSVC2005.
 
