--- a/wiki/Compliance.wiki
+++ b/wiki/Compliance.wiki
@@ -26,7 +26,7 @@ TODO: syncronize descriptions with current code base.
 
 ==C++ Library Headers==
 || # || <algorithm> || About 45%. ||
-|| # || <array>     || As in TR1, no tuple interface yet. ||
+|| # || <array>     || Complete. ||
 || # || <bitset>    || In x64 branch only; tested ||
 || # || <chrono>    || In x64 branch only; tested ||
 || # || <codecvt> ||
@@ -34,22 +34,22 @@ TODO: syncronize descriptions with current code base.
 || # || <complex>   || Not planned in the near future. ||
 || # || <deque> ||
 || # || <exception> || Incomplete (lack of C++0x features). ||
-|| # || <forward_list> ||
+|| # || <forward_list> || In x64 branch only; tested; incomplete (no sort) ||
 || # || <fstream>   ||
-|| # || <functional> || As in C++03, no `bind` & `function`. ||
+|| # || <functional> || As in C++03, without `bind`, `function`, refererence_closure, hashes ||
 || # || <initializer_list> || No compilers to support it (except GCC 4.4). ||
 || # || <iomanip>   || Complete (see iosfwd) ||
 || # || <ios>       || No `ios_base` callbacks, `locale`. ||
 || # || <iosfwd>    || Complete, but no benefins as I/O streams are in development. ||
 || # || <iostream> ||
 || # || <istream>   || Incomplete. ||
-|| # || <iterator>  || Complete (?) as in current Standard. ||
+|| # || <iterator>  || Complete. ||
 || # || <limits>    || Complete except of `numeric_limits<long double>::infinity()` & Co for ICC (10 bytes in size). ||
 || # || <list>      || No `splice`, `merge`. Redisign is planned to trade O(n) `size()`. ||
 || # || <locale>    || Incomplete. ||
 || # || <map>       || As RB tree now; untested ||
 || # || <memory>    || `unique_ptr<>` complete as in N2723, experemental `shared_ptr<>` based on linked list (not thread safe); untested. ||
-|| # || <mutex> ||
+|| # || <mutex> || In x64 branch only. ||
 || # || <new>       || Complete ||
 || # || <numeric>   || Only `std::accumulate`. ||
 || # || <ostream>   ||
@@ -66,7 +66,7 @@ TODO: syncronize descriptions with current code base.
 || # || <strstream> || Complete. ||
 || # || <system_error> ||
 || # || <threads> ||
-|| # || <tuple> ||
+|| # || <tuple> || In x64 branch only; tested; incomplete. ||
 || # || <typeinfo>  || Copmlete, but name demangling implemented in x64 branch only (not required by Standard). ||
 || # || <type_traits> || Almost complete (N2723) (no is_standard_layout for MSVC & ICC). ||
 || # || <unordered_map> ||
@@ -79,7 +79,7 @@ TODO: syncronize descriptions with current code base.
 || # || <cassert>   || Complete. ||
 || # || <ccomplex>  || Not planned. ||
 || # || <cctype> ||
-|| # || <cerrno> ||
+|| # || <cerrno> || Not planned. ||
 || # || <cfenv> ||
 || # || <cfloat>    || Complete. But no runtime support for floats yet. ||
 || # || <cinttypes> ||
@@ -87,13 +87,13 @@ TODO: syncronize descriptions with current code base.
 || # || <climits>   || Complete. ||
 || # || <clocale> ||
 || # || <cmath> ||
-|| # || <csetjmp> ||
+|| # || <csetjmp> || Not planned. ||
 || # || <csignal> ||
 || # || <cstdarg>   || Complete. ||
 || # || <cstdatomic> ||
 || # || <cstdbool> ||
 || # || <cstddef>   || No `NULL` macro, use `nullptr`. ||
-|| # || <cstdio> ||
+|| # || <cstdio> || Incomplete. ||
 || # || <cstdint> || Complete. ||
 || # || <cstdlib>   || `FILE` supports only binary mode. `atexit` in x64 branch only. No buffer-overflowing stuff included. ||
 || # || <cstring>   || No `strdup`. ||
