--- a/wiki/Compilers.wiki
+++ b/wiki/Compilers.wiki
@@ -11,7 +11,7 @@ TODO: intro.
  * Intel C++ 10.0 (or older?) or newer
  * Intel C++ 11.0
  * Codegear C++ 2009 (v6.16) 
- * GCC 4.3 or newer
+ * GCC 4.2 or newer
 
 
 = Details =
@@ -44,6 +44,6 @@ It supported only in [http://ontl.googlecode.com/svn/branches/stlx STLx] branch 
 
 === GCC ===
 
-GCC's C++ Frontend have an [http://gcc.gnu.org/projects/cxx0x.html experimental C++0x support].
+GCC's C++ Frontend have an [http://gcc.gnu.org/projects/cxx0x.html experimental C++0x support] (in 4.3+ version).
 
 It fully supported only in [http://ontl.googlecode.com/svn/branches/stlx STLx] branch with the external C runtime library.
