--- a/wiki/Compliance.wiki
+++ b/wiki/Compliance.wiki
@@ -30,14 +30,14 @@ TODO: syncronize descriptions with current code base.
 || # || <bitset>    || In x64 branch only; tested ||
 || # || <chrono>    || In x64 branch only; tested ||
 || # || <codecvt> ||
-|| # || <condition_variable> ||
+|| # || <condition_variable> ||Work in progress ||
 || # || <complex>   || Not planned in the near future. ||
 || # || <deque> ||
 || # || <exception> || Incomplete (lack of C++0x features). ||
 || # || <forward_list> || In x64 branch only; tested; incomplete (no sort) ||
 || # || <fstream>   ||
-|| # || <functional> || As in C++03, without `bind`, `function`, refererence_closure, hashes ||
-|| # || <future>    || 
+|| # || <functional> || Incomplete (no `bind` and refererence_closure) ||
+|| # || <future>    || Work in progress ||
 || # || <initializer_list> || No compilers to support it (except GCC 4.4). ||
 || # || <iomanip>   || Complete (see iosfwd) ||
 || # || <ios>       || No `ios_base` callbacks, `locale`. ||
@@ -46,10 +46,10 @@ TODO: syncronize descriptions with current code base.
 || # || <istream>   || Incomplete. ||
 || # || <iterator>  || Complete. ||
 || # || <limits>    || Complete except of `numeric_limits<long double>::infinity()` & Co for ICC (10 bytes in size). ||
-|| # || <list>      || No `splice`, `merge`. Redisign is planned to trade O(n) `size()`. ||
+|| # || <list>      || No `splice`, `merge`. Redesign is planned to trade O(n) `size()`. ||
 || # || <locale>    || Incomplete. ||
 || # || <map>       || As RB tree now; untested ||
-|| # || <memory>    || `unique_ptr<>` complete as in N2723, experemental `shared_ptr<>` based on linked list (not thread safe); untested. ||
+|| # || <memory>    || Incomplete. ||
 || # || <mutex> || In x64 branch only. ||
 || # || <new>       || Complete ||
 || # || <numeric>   || Only `std::accumulate`. ||
@@ -65,8 +65,8 @@ TODO: syncronize descriptions with current code base.
 || # || <streambuf> || As in C++03 (no `swap`). ||
 || # || <string>    || Missed few members and I/O support. ||
 || # || <strstream> || Complete. ||
-|| # || <system_error> ||
-|| # || <threads> ||
+|| # || <system_error> || In x64 branch, native ||
+|| # || <threads> || Work in progress ||
 || # || <tuple> || In x64 branch only; tested; incomplete. ||
 || # || <typeinfo>  || Copmlete, but name demangling implemented in x64 branch only (not required by Standard). ||
 || # || <type_traits> || Almost complete (N2723) (no is_standard_layout for MSVC & ICC). ||
