--- a/wiki/Compliance.wiki
+++ b/wiki/Compliance.wiki
@@ -44,12 +44,12 @@ To enable the different runtime features, include the corresponding [http://code
 || # || <exception> || Incomplete (lack of C++0x features). ||
 || # || <forward_list> || In x64 branch only; tested; incomplete (no sort) ||
 || # || <fstream>   || ||
-|| # || <functional> || Incomplete (no `bind` and refererence_closure) ||
+|| # || <functional> || In x64 branch only. ||
 || # || <future>    || Work in progress ||
 || # || <initializer_list> || No compilers to support it (except GCC 4.4). ||
-|| # || <iomanip>   || Complete (see iosfwd) ||
+|| # || <iomanip>   || Complete ||
 || # || <ios>       || No `ios_base` callbacks, `locale`. ||
-|| # || <iosfwd>    || Complete, but no benefins as I/O streams are in development. ||
+|| # || <iosfwd>    || Complete ||
 || # || <iostream> || Work in progress ||
 || # || <istream>   || Incomplete. ||
 || # || <iterator>  || Complete. ||
@@ -75,7 +75,7 @@ To enable the different runtime features, include the corresponding [http://code
 || # || <strstream> || Complete. ||
 || # || <system_error> || In x64 branch, native ||
 || # || <threads> || Work in progress ||
-|| # || <tuple> || In x64 branch only; tested; incomplete. ||
+|| # || <tuple> || In x64 branch only; tested. ||
 || # || <typeinfo>  || Copmlete, but name demangling implemented in x64 branch only (not required by Standard). ||
 || # || <type_traits> || Almost complete (N2723) (no is_standard_layout for MSVC & ICC). ||
 || # || <unordered_map> || In x64 branch only; untested. ||
